Fixed a few outdated methods